--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
   padding: 0;
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
+  color: white;
 }
 body {
   width: 100vw;
@@ -53,8 +54,8 @@ main {
   font-size: 20px;
 }
 .about {
-  margin: 20px 50px;
-  padding: 20px 50px;
+  margin: 50px 50px;
+  padding: 20px 20px;
   width: 900px;
   color: white;
   background: linear-gradient(135deg, rgb(37, 37, 37), rgb(27, 27, 27));
@@ -91,3 +92,37 @@ main {
   box-shadow: 5px 10px 10px rgba(92, 136, 208, 0.2);
   cursor: pointer;
 }
+.Features {
+   margin: 100px auto;
+   padding: 20px 50px;
+   width: 800px;
+   background-color: rgb(39, 39, 39);
+   border: 1px solid rgb(47, 47, 47);
+   color: white;
+   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+   display: flex;
+   flex-direction: column;
+   gap: 20px;
+   align-items: center;
+ }
+ .features-you-get ul {
+   display: flex;
+   flex-direction: column;
+   gap: 15px;
+ }
+ .features-you-get p{
+   font-size: 18px;
+   padding: 5px 30px;
+ }
+ .features-you-get li {
+   list-style: none;
+   padding: 10px 20px;
+   border: 1px solid rgb(47, 47, 47);
+   border-radius: 5px;
+   background-color: rgb(50, 50, 50);
+   transition: background-color 0.3s;
+ }
+ .features-you-get li:hover {
+   background-color: rgb(60, 60, 60);
+ }
+ 
