--- a/styles.css
+++ b/styles.css
@@ -76,7 +76,7 @@ main {
   align-items: center;
 }
 .exp {
-  width: 150px;
+  width: 200px;
   height: 150px;
   border: none;
   background-color: rgb(78, 76, 76);
@@ -86,6 +86,7 @@ main {
   align-items: center;
   text-align: center;
   font-weight: bold;
+  border-radius: 20px;
   transition: box-shadow 0.2s;
 }
 .exp:hover {
@@ -125,4 +126,115 @@ main {
  .features-you-get li:hover {
    background-color: rgb(60, 60, 60);
  }
- 
+ .services{
+   margin: 5px 50px;
+   padding: 20px 50px;
+   width: fit-content;
+   background-color: rgb(39, 39, 39);
+   display: flex;
+   flex-direction: column;
+   flex-wrap: wrap;
+   gap: 20px;
+ }
+ .services-you-get{
+   display: flex;
+   gap: 20px;
+ }
+ .service-card{
+   width: 300px;
+   padding: 20px;
+   background-color: rgb(50,50,50);
+   border: 1px solid rgb(47, 47, 47);
+   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+  border-radius: 10px;
+  transition: transform 0.2s, box-shadow 0.2s;
+ }
+ .service-card:hover{
+   transform: scale(1.05);
+  box-shadow: 0 6px 15px rgba(0, 0, 0, 0.3);
+ }
+ .employes{
+  background-color: rgb(39, 39, 39);
+   padding: 10px 30px;
+   margin: 60px auto;
+   display: flex;
+   flex-direction: column;
+   gap: 20px;
+ }
+.employee{
+   display: flex;
+   gap: 20px;
+}
+ .employee-card{
+   background-color: rgb(47, 47, 47);
+   width: fit-content;
+   padding: 10px 20px;
+   border-radius: 20px;
+   transition: transform 0.2s;
+   display: flex;
+   flex-direction: column;
+   gap: 10px;
+ }
+ .employee-card:hover{
+   transform: scale(1.05);
+   box-shadow: 0 6px 15px rgba(0, 0, 0, 0.3);
+ }
+ .containner_employee{
+   position: relative;
+   width: fit-content;
+ }
+ .containner_employee img{
+   opacity: 1;
+   display: block;
+   height: auto;
+   transition: 0.5s ease;
+   backface-visibility: hidden;
+   border-radius: 20px;
+ }
+
+ .middle{
+   transition: 0.5s ease;
+   opacity: 0;
+   position: absolute;
+   top: 50%;
+   left: 50%;
+   transform: translate(-50%, -50%);
+   -ms-transform: translate(-50%,-50%);
+ }
+ .containner_employee:hover .containner_employee img{
+   opacity: 0.3;
+ }
+ .containner_employee:hover .middle{
+   opacity: 1;
+ }
+ .github_link button{
+   background-color: black;
+   color: white;
+   font-size: 15px;
+   padding: 15px 40px;
+   border-radius: 10px;
+   cursor: pointer;
+ }
+ .bottom{
+   display: flex;
+   flex-direction: column;
+   margin: 10px auto;
+   gap: 20px;
+   width: 200px;
+   justify-content: center;
+   align-items: center;
+ }
+ .bottom button{
+   padding: 20px 20px;
+   background-color: rgb(57,57,57);
+   border: none;
+   font-weight: 600;
+   border-radius: 10px;
+   cursor: pointer;
+   display: flex;
+   align-items: center;
+   gap: 5px;
+ }
+ .bottom button:hover{
+   box-shadow: 10px 6px 15px rgba(0, 0, 0, 0.3);
+ }
