--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-/* General Reset */
+
 * {
   padding: 0;
   margin: 0;
@@ -6,13 +6,11 @@
   color: white;
 }
 
-/* Body Styling */
 body {
-  width: 100vw;
+  width: 99dvw;
   background-color: rgb(27, 27, 27);
 }
 
-/* Navigation */
 nav {
   display: flex;
   justify-content: space-between;
@@ -37,7 +35,6 @@ a {
   color: white;
 }
 
-/* Main Section */
 main {
   display: flex;
   flex-wrap: wrap;
@@ -64,9 +61,9 @@ main {
   height: auto;
 }
 
-/* About Section */
 .about {
   margin: 50px 50px;
+  margin-right: -50px;
   padding: 20px 20px;
   width: 900px;
   color: white;
@@ -254,7 +251,66 @@ main {
   transition: box-shadow 0.2s;
 }
 .bottom button:hover {
-  box-shadow: 10px 6px 15px rgba(0, 0, 0, 0.3);
+  box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.3);
+  rotate: 100deg;
+}
+
+.pricing-containner{
+  background-color: rgb(39, 39, 39);
+  padding: 10px 20px;
+  margin-bottom: 20px;
+}
+
+.prices{
+  display: flex;
+  gap: 100px;
+}
+
+.price_card{
+  width: 250px;
+  display: flex;
+  flex-direction: column;
+  background-color: rgb(27, 27, 27);
+  height: 300px;
+  padding: 20px 20px;
+  align-items: center;
+  gap: 50px;
+  border-radius: 20px;
+  margin-top: 100px;
+  margin-bottom: 20px;
+  transition: box-shadow 0.2s, transform 0.2s, width 0.5s;
+}
+.price_card:hover{
+  box-shadow: 10px 8px 15px rgba(0, 0, 0, 0.3);
+  transform: rotate(2deg);
+  width: 260px;
+}
+.price-top{
+  font-size: 30px;
+  text-align: center;
+  padding: 10px 20px;
+  background-color: rgba(162, 193, 116, 0.825);
+  border-radius: 20px;
+  width: 140px;
+  height: 140px;
+  display: flex;
+  gap: 20px;
+  flex-direction: column;
+  justify-content: center;
+  margin-top: -70px;
+}
+.price_card ul{
+  display: flex;
+  flex-direction: column;
+}
+
+.contact-containner{
+  width: 100dvw;
+  height: 150px;
+  padding: 10px 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 @media (max-width: 768px) {
